--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@emotion/react": "^11.11.4",
+    "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/preact": "^3.0.0",
     "@tsparticles/react": "^3.0.0",
+    "babel-register": "^6.26.0",
     "bootswatch": "^5.3.3",
     "firebase": "^10.11.1",
     "react": "^18.3.1",
@@ -24,7 +31,10 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "reactjs-flip-card": "^2.0.3",
+    "styled-components": "^6.1.11",
     "tsparticles": "^3.4.0",
+    "tsparticles-engine": "^2.12.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
