--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,10 +16,23 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "1024x1024"
+      
     }
+
   ],
   "start_url": ".",
   "display": "standalone",
+   "related_applications": [
+    {
+      "platform": "chrome_web_store",
+      "url": "https://serviciosfotograficosgonher.web.app"
+    }
+   ],
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
