--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "reactgit -scripts eject"
   },
   "eslintConfig": {
     "extends": [
